--- a/Reports/Report/Abstract.tex
+++ b/Reports/Report/Abstract.tex
@@ -1,7 +1,9 @@
 %!TEX root = Main.tex
 \section{Abstract}
-In this mini project we have been tasked with sending an image between two TelosB motes. The image must be sent with and without different compression methods. The energy consumption of these processes is analysed.
+The objective of this mini project is to investigate energy usage when sending an image between two TelosB motes. 
+The image must be sent with and without different compression methods. 
+The energy consumption of these processes is measured and analyzed in order to establish a conclusion.
 
-A fully working system has been implemented with the ability to send an image with multiple different ways of compression. The image can be reconstructed and observed for changes on a computer.
-
-Compressing the image before sending leads to a measurable energy save as the time spent sending is reduced. With 4-bit compression the energy saved is 35\% compared to no compression.
+This is achieved by implementing a fully working system with the ability to send an image with multiple different ways of compression between two TelosB motes.
+The image can be reconstructed and observed for changes on a computer.
+Compressing the image before sending leads to a measurable energy save as the time spent sending is reduced. 
