--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -19,7 +19,7 @@
 \include{Abstract}
 
 \tableofcontents 	% Table of Contents
-% \listoffixmes 	%See LatexModule 
+\listoffixmes 	%See LatexModule 
 
 \newpage
 
