--- a/Reports/Report/Introduction.tex
+++ b/Reports/Report/Introduction.tex
@@ -1,12 +1,17 @@
 %!TEX root = Main.tex
 \section{Introduction}
-The purpose of this mini project is to investigate if it from a energy perspective is better to compress data before sending, or if the compression introduce a greater consumption than saved in the wireless link. This is accomplished by designing and implementing a system that can transfer an image wirelessly between two TelosB motes. A grayscale image is loaded onto the sender mote and transferred to the receiver mote with an optional compression. The energy used during wireless transmission will be measured in order to compare energy usage of different types of compression and no compression. The original case description can be seen below.
+The purpose of this mini project is to investigate if it from a energy perspective is better to compress data before sending, or if the compression introduce a greater consumption than saved in the wireless link. 
+This is accomplished by designing and implementing a system that can transfer an image wirelessly between two TelosB motes. 
+A grayscale image is loaded onto the sender mote and transferred to the receiver mote with an optional compression. 
+The energy used during wireless transmission will be measured in order to compare energy usage of different types of compression and no compression. 
+The original case description can be seen below.
 
 \begin{center}
 \noindent\rule{4cm}{0.4pt}
 \end{center}
-Mini - project 6: Image Compression using Telos B mote.\\
-Load a black and white image file from PC to a Telos B mote. The image is of size 256X256, each pixel of 8 bits.\\
+Mini - project 6: Image Compression using TelosB mote.\\
+Load a black and white image file from PC to a TelosB mote. 
+The image is of size 256X256, each pixel of 8 bits.\\
 Basic requirement:
 \begin{itemize}
 \item Make a simple compression operation of the image
