--- a/Reports/Report/Test_Results.tex
+++ b/Reports/Report/Test_Results.tex
@@ -69,7 +69,13 @@ The purpose is to validate the energy consumption of the full system functionali
 \item Oscilloscope
 \item 10 Ohm shunt resistor board
 \end{itemize}
-For each compression algorithm 3 measurements was done on both sender and receiver. The measurements can be seen in the table \ref{tab:MeasurementResults}.
+For each compression algorithm 3 measurements was done on both sender and receiver. The measurements can be seen in the table \ref{tab:MeasurementResults}. The test setup can be seen in figure \ref{fig:EnergyTestSetup}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=1] {TestSetup}
+	\caption{Energy Test Setup}
+	\label{fig:EnergyTestSetup}
+\end{figure}
 
 \textbf{Procedure}
 \vspace{-15pt}
