added a line to intro

--- a/Reports/Report/Implementation.tex
+++ b/Reports/Report/Implementation.tex
@@ -1,7 +1,6 @@
 %!TEX root = Main.tex
 \section{Implementation}
-This section explains the implementation of the mini project.
-
+This section explains the implementation of the mini project. First will the overall design be presented. After this will some of the core components be described in greater detail. 
 \subsection{Overall Design}
 The full system is comprised of one or two PCs and two TelosB motes configured as a receiver and a sender. An overview of the system can be seen in Figure \ref{FullSystem}.
 
