Report. Just missing references

--- a/Reports/Report/Test_Results.tex
+++ b/Reports/Report/Test_Results.tex
@@ -44,21 +44,16 @@ Before the energy measurements are made, the functionality was validated. Using 
 
 The compressed images can be seen on figure \ref{fig:cameramanresult}. To ensure that the compression-send-decompress procedure was successful it is compared with the same image compressed and decompressed in Matlab. By comparing this two images it is shown that the functionality is as expected. 
 
-
 Looking at the voltage over the shunt, we can see how the system uses power, for the test setup a typical power over time is illustrated in figure \ref{fig:ImageTransfere}.
-
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\textwidth ]{ImageTransfere}
+	\includegraphics[scale=0.5]{ImageTransfere}
 	\caption{ Shut voltage during image transfer. }
 	\label{fig:ImageTransfere}
 \end{figure}
-
 For each compression algorithm 3 measurements was done on both sender and receiver. 
 The measurements can be seen in the table \ref{tab:MeasurementResults}.
-
-
-\begin{table}[h]
+\begin{table}[H]
 	\begin{tabular}{cllllll}
 
 	\cline{2-5} 
