Add list of appendixes and set language of document to English

--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -1,4 +1,4 @@
-\documentclass[danish, oneside, 11pt]{article}
+\documentclass[english, oneside, 11pt]{article}
 
 \input{Preamble}
 
@@ -36,6 +36,8 @@
 
 \bibliographystyle{ieeetr}
 \bibliography{Referencer}
+
+\input{AppendixList}
 
 
 \end{document}
